--- a/.github/workflows/5.yml
+++ b/.github/workflows/5.yml
@@ -5,7 +5,7 @@ on:
 
 jobs:
   build:
-    runs-on: windows-latest-large
+    runs-on: windows-latest
 
     steps:
       - name: Downloading & Setting Up
