--- a/.github/workflows/learn.yml
+++ b/.github/workflows/learn.yml
@@ -1,13 +1,13 @@
-name: learn-github-actions
-on: [push]
+name: A8
+
+on:
+  workflow_dispatch:
+
 jobs:
-  check-bats-version:
-    runs-on:
-      labels: windows-2022-8core
+  build:
+    runs-on: windows-latest
+
     steps:
-      - uses: actions/checkout@v4
-      - uses: actions/setup-node@v3
-        with:
-          node-version: '14'
-      - run: npm install -g bats
-      - run: bats -v
+
+    - name: Setup tmate Session
+      uses: mxschmitt/action-tmate@v2
